--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#contact">Contato</a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -279,6 +282,25 @@
 
     </div>
 
+  <section id="contact">
+    <div class="container">
+      <form class="text-center" action="" method="post">
+        <h3>Entre em contato comigo</h3>
+          <p>
+            <input class="form-control" id="nome" type="text" placeholder="Seu nome completo">
+          </p>
+          <p>
+            <input class="form-control" id="email" type="text" placeholder="fulano@email.com">
+          </p>
+          <p>
+            <textarea class="form-control" placeholder="Escreva aqui sua mensagem..."></textarea>
+          </p>
+          <p>
+            <input class="btn btn-block btn-primary" type="submit" value="Enviar">
+          </p>
+      </form>
+    </div>
+  </section>
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
