--- a/index.html
+++ b/index.html
@@ -296,11 +296,12 @@
             <textarea class="form-control" placeholder="Escreva aqui sua mensagem..."></textarea>
           </p>
           <p>
-            <input class="btn btn-block btn-primary" type="submit" value="Enviar">
+            <input class="btn btn-block btn-primary" type="submit" onclick="Enviar()" value="Enviar">
           </p>
       </form>
     </div>
   </section>
+    <script src="js/my.js"></script>
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
